Ménage deprecated JDK11