@@ -70,7 +70,7 @@ public class UserTableModel
     User m = tuples.elementAt(line);
     switch (col) {
       case 0:
-        return new Integer(m.getId());
+        return Integer.valueOf(m.getId());
       case 1:
         return m.getName();
       case 2:
